--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -182,6 +182,7 @@ if(GENERATE_PERFORMANCE_OUTPUT)
 endif(GENERATE_PERFORMANCE_OUTPUT)
 
 # Compile and link
+LINK_DIRECTORIES(${FFmpeg_LIBRARY_DIRS})
 ADD_LIBRARY(${NAME} SHARED ${HEADERS} ${SOURCES})
 TARGET_LINK_LIBRARIES(${NAME} ${LIBS})
 LIST(APPEND INSTALLABLES ${NAME})
