Issue #65: enclosed link_directories relevant to FFmpeg-linking in USE_FFMPEG conditional, and added pkg-config dependency information to README

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -182,7 +182,9 @@ if(GENERATE_PERFORMANCE_OUTPUT)
 endif(GENERATE_PERFORMANCE_OUTPUT)
 
 # Compile and link
-LINK_DIRECTORIES(${FFmpeg_LIBRARY_DIRS})
+if(USE_FFMPEG)
+    LINK_DIRECTORIES(${FFmpeg_LIBRARY_DIRS})
+endif(USE_FFMPEG)
 ADD_LIBRARY(${NAME} SHARED ${HEADERS} ${SOURCES})
 TARGET_LINK_LIBRARIES(${NAME} ${LIBS})
 LIST(APPEND INSTALLABLES ${NAME})
