Issue #65: added REQUIRED qualifier for find_package: Doxygen

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -191,7 +191,7 @@ LIST(APPEND INSTALLABLES ${NAME})
 
 # Documentation
 if(BUILD_DOC)
-    FIND_PACKAGE(Doxygen)
+    FIND_PACKAGE(Doxygen REQUIRED)
     if(DOXYGEN_FOUND)
         SET(DOXYFILE_IN ${CMAKE_CURRENT_SOURCE_DIR}/../doc/Doxyfile.in)
         SET(DOXYFILE ${CMAKE_CURRENT_BINARY_DIR}/doc/Doxyfile)
