--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -162,11 +162,7 @@ endif(USE_COLOUR_SPACE_I420)
 
 # Epiphan SDK video source
 if(USE_EPIPHANSDK)
-    if(NOT DEFINED EpiphanSDK_DIR)
-        MESSAGE(FATAL_ERROR
-                "EpiphanSDK_DIR not defined. This configuration requires EpiphanSDK.")
-    endif()
-    FIND_PACKAGE(EpiphanSDK CONFIG REQUIRED)
+    FIND_PACKAGE(EpiphanSDK REQUIRED)
     INCLUDE_DIRECTORIES(${EpiphanSDK_INCLUDE_DIR})
     INCLUDE_DIRECTORIES(epiphansdk)
     LIST(APPEND LIBS ${EpiphanSDK_LIBS})
