--- a/src/tests/epiphan/dvi2pcieduo/CMakeLists.txt
+++ b/src/tests/epiphan/dvi2pcieduo/CMakeLists.txt
@@ -36,7 +36,7 @@ SET_TESTS_PROPERTIES(${NAME_TEST}
     "PYTHONPATH=${PYTHONPATH}"
 )
 
-if(NOT USE_COLOUR_SPACE_I420)
+if(NOT USE_I420)
     SET(NAME_TEST Test_Epiphan_DVI2PCIeDuo_RealTime_MultiThreaded_BGR24)
     ADD_TEST(NAME ${NAME_TEST}
         COMMAND py.test --colour-space=BGR24 test_realtime.py
@@ -45,7 +45,7 @@ if(NOT USE_COLOUR_SPACE_I420)
         PROPERTIES ENVIRONMENT
         "PYTHONPATH=${PYTHONPATH}"
     )
-else(NOT USE_COLOUR_SPACE_I420)
+else(NOT USE_I420)
     SET(NAME_TEST Test_Epiphan_DVI2PCIeDuo_RealTime_MultiThreaded_I420)
     ADD_TEST(NAME ${NAME_TEST}
         COMMAND py.test --colour-space=I420 test_realtime.py
@@ -54,4 +54,4 @@ else(NOT USE_COLOUR_SPACE_I420)
         PROPERTIES ENVIRONMENT
         "PYTHONPATH=${PYTHONPATH}"
     )
-endif(NOT USE_COLOUR_SPACE_I420)
+endif(NOT USE_I420)
