Issue #70: added current branch to CI real-time tests

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -39,3 +39,4 @@ real-time:
     - 67-create-user-friendly-tests
     - 65-restructure-cmake-build-process
     - 66-simplify-file-hierarchy
+    - 70-corrupt-memory-when-reusing-target
