Issue #76: added current branch to CI real-time tests

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -40,3 +40,4 @@ real-time:
     - 65-restructure-cmake-build-process
     - 66-simplify-file-hierarchy
     - 70-corrupt-memory-when-reusing-target
+    - 76-tests-not-working-without-opencv
