Issue #78: added current branch to CI real-time tests

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -41,3 +41,4 @@ real-time:
     - 66-simplify-file-hierarchy
     - 70-corrupt-memory-when-reusing-target
     - 76-tests-not-working-without-opencv
+    - 78-add-ctest-to-ci-scripts
