Issue #78: removed boilerplate code setting PYTHONPATH for Epiphan tests

--- a/src/tests/epiphan/dvi2pcieduo/CMakeLists.txt
+++ b/src/tests/epiphan/dvi2pcieduo/CMakeLists.txt
@@ -18,6 +18,9 @@ SET(PYTHONPATH
 # to avoid copying epiphan module
 SET(PYTHONPATH "${CMAKE_SOURCE_DIR}/python/modules:${PYTHONPATH}")
 
+# start with a fresh variable
+SET(TESTS_LIST "")
+
 # set colour space
 if(USE_I420)
     SET(COLOUR_SPACE I420)
@@ -29,36 +32,29 @@ SET(NAME_TEST Test_Epiphan_DVI2PCIeDuo_SDI)
 ADD_TEST(NAME ${NAME_TEST}
     COMMAND py.test --port=SDI --colour-space=${COLOUR_SPACE} test_unit.py
 )
-SET_TESTS_PROPERTIES(${NAME_TEST}
-    PROPERTIES ENVIRONMENT
-    "PYTHONPATH=${PYTHONPATH}"
-)
+LIST(APPEND TESTS_LIST ${NAME_TEST})
 
 SET(NAME_TEST Test_Epiphan_DVI2PCIeDuo_DVI)
 ADD_TEST(NAME ${NAME_TEST}
     COMMAND py.test --port=DVI --colour-space=${COLOUR_SPACE} test_unit.py
 )
-SET_TESTS_PROPERTIES(${NAME_TEST}
-    PROPERTIES ENVIRONMENT
-    "PYTHONPATH=${PYTHONPATH}"
-)
+LIST(APPEND TESTS_LIST ${NAME_TEST})
 
 if(NOT USE_I420)
     SET(NAME_TEST Test_Epiphan_DVI2PCIeDuo_RealTime_MultiThreaded_BGR24)
     ADD_TEST(NAME ${NAME_TEST}
         COMMAND py.test --colour-space=BGR24 test_realtime.py
     )
-    SET_TESTS_PROPERTIES(${NAME_TEST}
-        PROPERTIES ENVIRONMENT
-        "PYTHONPATH=${PYTHONPATH}"
-    )
+    LIST(APPEND TESTS_LIST ${NAME_TEST})
 else(NOT USE_I420)
     SET(NAME_TEST Test_Epiphan_DVI2PCIeDuo_RealTime_MultiThreaded_I420)
     ADD_TEST(NAME ${NAME_TEST}
         COMMAND py.test --colour-space=I420 test_realtime.py
     )
-    SET_TESTS_PROPERTIES(${NAME_TEST}
-        PROPERTIES ENVIRONMENT
-        "PYTHONPATH=${PYTHONPATH}"
-    )
+    LIST(APPEND TESTS_LIST ${NAME_TEST})
 endif(NOT USE_I420)
+
+SET_TESTS_PROPERTIES(${TESTS_LIST}
+    PROPERTIES ENVIRONMENT
+    "PYTHONPATH=${PYTHONPATH}"
+)
