--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -12,10 +12,19 @@ before_script:
   - export GiftGrab_SOURCE_DIR="$(pwd)/src"
   - export GiftGrab_BUILD_DIR="$SCRATCH_DIR/build/GiftGrab"
   - export INSTALL_DIR="$SCRATCH_DIR/install"
+  - source "$CI_SCRIPTS_DIR/utils.sh"
+  - rm -rf "$GiftGrab_BUILD_DIR"
+  - mkdir -p "$GiftGrab_BUILD_DIR"
+  - cd "$GiftGrab_BUILD_DIR"
 
 # Linux ##################
 gift-linux:
   script:
+    - # bare-bones build
+    - cmake -D CMAKE_INSTALL_PREFIX="$INSTALL_DIR" "$GiftGrab_SOURCE_DIR"
+    - make -j; exit_on_fail
+    - # no ctest: no features activated to be tested yet
+    - make install
     - "$CI_SCRIPTS_DIR/build-linux.sh"
   tags:
     - gift-linux
