--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -20,8 +20,10 @@ before_script:
 # Linux ##################
 gift-linux:
   script:
+    # bare-bones build
     - cmake -D CMAKE_INSTALL_PREFIX="$INSTALL_DIR" "$GiftGrab_SOURCE_DIR"
     - make -j; exit_on_fail
+    # no ctest: no features activated to be tested yet
     - make install
     # Python and tests (currently all python)
     - cmake -D BUILD_PYTHON=ON -D BUILD_TESTS=ON .
