--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -69,9 +69,25 @@ gift-linux:
 # Real-time recording ####
 real-time:
   script:
-    - export num_lines=$(v2u | grep --count "no signal detected")
-    - export DVI2PCIEDUO_REALTIME=test_realtime.py
-    - "$CI_SCRIPTS_DIR/test-real-time.sh"
+    - cmake -D USE_EPIPHAN_DVI2PCIE_DUO=ON -D BUILD_PYTHON=ON -D BUILD_TESTS=ON -D USE_H265=ON -D USE_NVENC=ON "$GiftGrab_SOURCE_DIR"
+    - make -j
+    # check smt connected to Epiphan
+    - check_epiphan_alive
+    # copy needed files
+    - cp "$GiftGrab_SOURCE_DIR/python/modules/epiphan.py" ./
+    - cp "$GiftGrab_SOURCE_DIR/tests/epiphan/dvi2pcieduo/test_realtime.py" ./
+    - cp "$GiftGrab_SOURCE_DIR/tests/epiphan/dvi2pcieduo/conftest.py" ./
+    - cp --recursive "$GiftGrab_SOURCE_DIR/tests/epiphan/dvi2pcieduo/config" ./
+    - cp "$GiftGrab_SOURCE_DIR/python/modules/example_epiphan/"* ./config
+    - cp "$GiftGrab_SOURCE_DIR/tests/utils/inspection.py" ./
+    # actual test
+    - py.test --colour-space=BGR24 test_realtime.py
+    # and now with I420
+    - cmake -D USE_I420=ON .
+    - make -j
+    # check smt connected to Epiphan
+    - check_epiphan_alive
+    - py.test --colour-space=I420 test_realtime.py
   tags:
     - gift-surg-storz-stack
   only:
