--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -96,25 +96,27 @@ if(USE_OPENCV)
     LIST(APPEND SOURCES opencv/opencv_video_target.cpp)
 endif(USE_OPENCV)
 
-# FFmpeg video encoder
+# FFmpeg components
 if(USE_FFMPEG)
     FIND_PACKAGE(FFmpeg REQUIRED)
-
+    INCLUDE_DIRECTORIES(${FFmpeg_INCLUDE_DIRS})
+    LIST(APPEND LIBS ${FFmpeg_LIBS})
+    LINK_DIRECTORIES(${FFmpeg_LIBRARY_DIRS})
     ADD_DEFINITIONS(-DUSE_FFMPEG)
     if(USE_NVENC)
         ADD_DEFINITIONS(-DUSE_NVENC)
     endif(USE_NVENC)
-    INCLUDE_DIRECTORIES(${FFmpeg_INCLUDE_DIRS})
+
     INCLUDE_DIRECTORIES(ffmpeg)
     LIST(APPEND HEADERS ffmpeg/ffmpeg_video_target.h)
     LIST(APPEND SOURCES ffmpeg/ffmpeg_video_target.cpp)
-    LIST(APPEND LIBS ${FFmpeg_LIBS})
 endif(USE_FFMPEG)
 
 # Support for I420 (YUV420p) colour space
 if(USE_I420)
     SET(USE_EPIPHANSDK ON)
     ADD_DEFINITIONS(-DUSE_I420)
+
     LIST(APPEND HEADERS api/videoframe_i420.h)
     LIST(APPEND SOURCES api/videoframe_i420.cpp)
 endif(USE_I420)
@@ -137,9 +139,6 @@ if(GENERATE_PERFORMANCE_OUTPUT)
 endif(GENERATE_PERFORMANCE_OUTPUT)
 
 # Compile and link
-if(USE_FFMPEG)
-    LINK_DIRECTORIES(${FFmpeg_LIBRARY_DIRS})
-endif(USE_FFMPEG)
 ADD_LIBRARY(${NAME} SHARED ${HEADERS} ${SOURCES})
 TARGET_LINK_LIBRARIES(${NAME} ${LIBS})
 LIST(APPEND INSTALLABLES ${NAME})
@@ -176,6 +175,7 @@ if(BUILD_PYTHON)
     INCLUDE_DIRECTORIES(${PYTHON_INCLUDE_DIRS})
     FIND_PACKAGE(Boost COMPONENTS python REQUIRED)
     INCLUDE_DIRECTORIES(${Boost_INCLUDE_DIR})
+
     SET(NAME_PYTHON py${NAME})
     ADD_LIBRARY(${NAME_PYTHON} SHARED python/wrapper.cpp)
     TARGET_LINK_LIBRARIES(${NAME_PYTHON} ${Boost_LIBRARIES} ${NAME})
