Issue #77: added forced overwrite for USE_EPIPHANSDK option

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -114,7 +114,7 @@ endif(USE_FFMPEG)
 
 # Support for I420 (YUV420p) colour space
 if(USE_I420)
-    SET(USE_EPIPHANSDK ON)
+    SET(USE_EPIPHANSDK ON CACHE BOOL "OFF ON" FORCE)
     ADD_DEFINITIONS(-DUSE_I420)
 
     LIST(APPEND HEADERS api/videoframe_i420.h)
