Issue #68: moved GiftGrab_OpenCV.cmake to CMakeLists.txt file under cmake/opencv

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -91,7 +91,7 @@ SET(SOURCES
 
 # OpenCV components
 if(USE_OPENCV)
-    INCLUDE(cmake/GiftGrab_OpenCV.cmake)
+    SUBDIRS(cmake/opencv)
 endif(USE_OPENCV)
 
 # FFmpeg components
