Issue #68: caching OpenCV CMake vars for parent use

--- a/src/cmake/opencv/CMakeLists.txt
+++ b/src/cmake/opencv/CMakeLists.txt
@@ -1,1 +1,7 @@
 FIND_PACKAGE(OpenCV REQUIRED)
+SET(OpenCV_INCLUDE_DIRS ${OpenCV_INCLUDE_DIRS}
+    CACHE INTERNAL "OpenCV include dirs"
+)
+SET(OpenCV_LIBS ${OpenCV_LIBS}
+    CACHE INTERNAL "OpenCV libs"
+)
