--- a/src/cmake/opencv/CMakeLists.txt
+++ b/src/cmake/opencv/CMakeLists.txt
@@ -1,3 +1,5 @@
+CMAKE_MINIMUM_REQUIRED(VERSION 3.2.0)
+
 FIND_PACKAGE(OpenCV REQUIRED)
 SET(OpenCV_INCLUDE_DIRS ${OpenCV_INCLUDE_DIRS}
     CACHE INTERNAL "OpenCV include dirs"
