Issue #68: fixed CI script for PyPI packaging, which was changing to non-existent directory

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -71,6 +71,7 @@ gift-linux:
 pypi-packaging:
   script:
     - rm -rf "$GiftGrab_PyPI_BUILD_DIR"
+    - mkdir "$GiftGrab_PyPI_BUILD_DIR"
     - cd "$GiftGrab_PyPI_BUILD_DIR"
     - pwd
   tags:
