Issue #68: added python sdist to PyPI CI script

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -74,6 +74,8 @@ pypi-packaging:
     - mkdir "$GiftGrab_PyPI_BUILD_DIR"
     - cd "$GiftGrab_PyPI_BUILD_DIR"
     - pwd
+    - python "$GiftGrab_SOURCE_DIR/setup.py" sdist
+    - ls -alh ./*
   tags:
     - gift-linux
 
