Issue #68: saving installer filename in variable

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -73,9 +73,12 @@ pypi-packaging:
     - rm -rf "$GiftGrab_PyPI_BUILD_DIR"
     - mkdir "$GiftGrab_PyPI_BUILD_DIR"
     - cd "$GiftGrab_PyPI_BUILD_DIR"
-    - pwd
+    - export GiftGrab_PyPI_DIST_DIR=dist
+    - rm -rfv "$GiftGrab_PyPI_DIST_DIR"
     - python "$GiftGrab_SOURCE_DIR/setup.py" sdist
     - ls -alh ./*
+    - installer=$(ls "$GiftGrab_PyPI_DIST_DIR" | grep giftgrab | grep tar | grep gz)
+    - if [ -z "$installer" ]; then echo "nothing"; else echo "$installer"; fi
   tags:
     - gift-linux
     - gift-pypi
