Issue #68: now installing the PyPI installer in CI PyPI script as well

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -17,6 +17,7 @@ before_script:
   - mkdir -p "$GiftGrab_BUILD_DIR"
   - cd "$GiftGrab_BUILD_DIR"
   - export GiftGrab_PyPI_BUILD_DIR="$SCRATCH_DIR/build/GiftGrab_PyPI"
+  - export GiftGrab_PyPI_INSTALL_DIR="$GiftGrab_PyPI_BUILD_DIR/pip_install"
 
 # Linux ##################
 gift-linux:
@@ -77,8 +78,9 @@ pypi-packaging:
     - rm -rfv "$GiftGrab_PyPI_DIST_DIR"
     - python "$GiftGrab_SOURCE_DIR/setup.py" sdist
     - ls -alh ./*
-    - installer="$GiftGrab_PyPI_DIST_DIR/$(ls $GiftGrab_PyPI_DIST_DIR | grep tar.gz)"
-    - if [ -z "$installer" ]; then echo "nothing"; else echo "$installer"; fi
+    - PyPI_INSTALLER="$GiftGrab_PyPI_DIST_DIR/$(ls $GiftGrab_PyPI_DIST_DIR | grep tar.gz)"
+    - if [ -z "$PyPI_INSTALLER" ]; then echo "nothing"; else echo "$PyPI_INSTALLER"; fi
+    - pip install --target "$GiftGrab_PyPI_INSTALL_DIR/pip_install" --upgrade "$PyPI_INSTALLER"
   tags:
     - gift-linux
     - gift-pypi
